--- a/templates/indexscroll.html
+++ b/templates/indexscroll.html
@@ -81,7 +81,13 @@
 
 
 <body>
-    <h1>Futbol (Soccer) World Cup     </h1>
+    <h1>A Brief History of Futbol (Soccer) World Cups</h1>
+    <nav>
+        <h4> When finish, please this link to go back to home page.</h4>
+        <ul>
+          <a href="../index.html">Go to World Cup History Page</a>
+        </ul>
+      </nav>
     <div>
         <p>
             FIFA is an international governing body of association football, beach football and futsal. It was founded in 1904. FIFA divides the 
