--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -1,5 +1,7 @@
 /* Reference for creating columngs: https://www.w3schools.com/howto/howto_css_three_columns.asp */
 
+.body {margin:50;padding:10}
+
 .columnt {
     float: left;
   }.left, .right {
@@ -10,7 +12,7 @@
 
   .columnt1 {
     float: left;
-    width: 50%;
+    width: 10%;
   }
   
   /* Clear floats after the columns */
@@ -21,17 +23,17 @@
   }
 
 
-.column {
+/* .column {
     float: left;
-    width: 33.33%;
-  }
+    width: 50%;
+  } */
   
   /* Clear floats after the columns */
-  .row:after {
+  /* .row:after {
     content: "";
     display: table;
     clear: both;
-  }
+  } */
 
 
   .columng {
