--- a/templates/indexscroll.html
+++ b/templates/indexscroll.html
@@ -83,9 +83,9 @@
 <body>
     <h1>A Brief History of Futbol (Soccer) World Cups</h1>
     <nav>
-        <h4> When finish, please this link to go back to home page.</h4>
+        <h4> When finish, use this link to go back to home page.</h4>
         <ul>
-          <a href="../index.html">Go to World Cup History Page</a>
+          <a href="../index.html">Go back to Home Page</a>
         </ul>
       </nav>
     <div>
@@ -362,6 +362,13 @@
             </p>
             <div><div id="chart2"></div></div>  
     </section>
+
+    <nav>
+        <h4> When finish, use this link to go back to home page.</h4>
+        <ul>
+          <a href="../index.html">Go back to Home Page</a>
+        </ul>
+      </nav>
 
     <section id="outro"></section>
 
