--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -1,73 +1,52 @@
 /* Reference for creating columngs: https://www.w3schools.com/howto/howto_css_three_columns.asp */
 
-.navbar-fixed-top {
-  position: fixed;
-  right: 0;
-  left: 0;
-  }
-
-
-.columnt {
-    float: left;
-  }.left, .right {
-    width: 10%;
-  }.middle {
-    width: 30%;
-  }
-
-  .columnt1 {
-    float: left;
-    width: 10%;
-  }
-  
   /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
 
+    body {
+      /* margin: 50px 200px 50px 100px; */
+      margin-top: 50px;
+      margin-bottom: 100px;
+      margin-right: 50px;
+      margin-left: 50px;
+    }
+    
+    .header {
+      padding: 80px;
+      text-align: justify;
+      background: white;
+      color: black;
+      linespacing: 1.5
+        
+    }
 
-/* .column {
-    float: left;
-    width: 50%;
-  } */
-  
-  /* Clear floats after the columns */
-  /* .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  } */
+    /* Increase the font size of the h1 element */
+    .header h1 {
+      font-size: 40px;
+    }
 
+       /* Style the top navigation bar */
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+      }
 
-  .columng {
-    float: left;
-    width: 50%;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+      /* Style the navigation bar links */
+      .navbar a {
+        float: left;
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+      }
 
-  .columng2 {
-    float: left;
-    width: 100%;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+      /* Right-aligned link */
+      .navbar a.right {
+        float: right;
+      }
 
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
+      /* Change color on hover */
+      .navbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
