--- a/templates/indexscroll.html
+++ b/templates/indexscroll.html
@@ -4,20 +4,22 @@
 <head>
   
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=900, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=900, initial-scale=1.0"> -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Document</title>
+
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 
     <script src="https://cdn.jsdelivr.net/npm/vega@5.21.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.2.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.20.2"></script>
 
+    <link rel="stylesheet" href="../static/css/style1.css" />
+
     <style>
-        body {
-            font-family: sans-serif;
-            margin: 20px;
-            font-size: 12px;
-        }
-        
         .holder {
             display: flex;
         }
@@ -77,40 +79,57 @@
     </style>
 </head>
 
-<!-- <svg id="chart1 "></svg> -->
-
-
 <body>
-    <h1>A Brief History of Futbol (Soccer) World Cups</h1>
-    <nav>
-        <h4> When finish, use this link to go back to home page.</h4>
-        <ul>
-          <a href="../index.html">Go back to Home Page</a>
-        </ul>
-      </nav>
-    <div>
-        <p>
-            FIFA is an international governing body for football, beach football and futsal. FIFA divides the 
-            countries in six regions (AFC, CAF, CONCACAF, CONMEBOL, OFC, UEFA). Wold Cups are implemented every 4 year, and there have been 21 world cups 
-            within 1930 and 2018. The following graphs provide a brief history of the world cups from 1930 to 2018.
-            The FIFA confederations are the following:
-          </p>
-          <ol>
-            <li>AFC = Asian Football Confederation in Asia and Australia.</li>
-            <li>CAF = Confédération Africaine de Football in Africa.</li>
-            <li>CONCACAF = Confederation of North, Central American and Caribbean Association Football in North America and Central America.</li>
-            <li>CONMEBOL = Confederación Sudamericana de Fútbol</li>
-            <li>OFC = Oceania Football Confederation in Oceania</li>
-            <li>UEFA = Union of European Football Associations</li>
-          </ol>
-              </div>
+
+    <div class="navbar">
+        <a href="../templates/indexwc1.html"target="_blank">Confederation Performance</a>
+        <a href="../templates/indexfifawc.html"target="_blank">FiFA Ranking &   WC Performance</a>
+        <a href="../templates/indexscroll.html"target="_blank">Brief World Cup History</a>
+        <a href="../index.html" class="right">Home</a>
+    </div>
+
+  <div class="header">
+    
+    <div class="container px-1 text-left">
+        <div class="row gx-5">
+          <div class="col">
+                <div class="p-3 border bg-light">
+                    <h4>A Brief History of Futbol (Soccer) World Cups</h4>
+                        <p>
+                            FIFA is an international governing body for football, beach football and futsal. FIFA divides the 
+                            countries in six regions (AFC, CAF, CONCACAF, CONMEBOL, OFC, UEFA). Wold Cups are implemented every 4 year, 
+                            and there have been 21 world cups 
+                            within 1930 and 2018. The following graphs provide a brief history of the world cups from 1930 to 2018.
+                            The FIFA confederations are the following:
+                        </p>
+                </div>
+          </div>
+        </div>
+        
+        <div class="row gx-5">
+            <div class="col">
+                <div class="p-3 border bg-light">
+                    <ol>
+                        <li>AFC = Asian Football Confederation in Asia and Australia.</li>
+                        <li>CAF = Confédération Africaine de Football in Africa.</li>
+                        <li>CONCACAF = Confederation of North, Central American and Caribbean Association Football in North America and Central America.</li>
+                        <li>CONMEBOL = Confederación Sudamericana de Fútbol</li>
+                        <li>OFC = Oceania Football Confederation in Oceania</li>
+                        <li>UEFA = Union of European Football Associations</li>
+                    </ol>
+                </div>
+           </div>
+        </div>
+
+    </div>
+
     <hr />
     <section>
         <div>
-            <h2>Scroll Down to explore the different world cups:</h2>
+            <h4>Scroll Down to explore the different world cups:</h4>
         </div>
         <div> 
-            <h3>Select Metric and Click on button:</h3>
+            <h7>Select Metric and Click on button:</h7>
             <select id="select1"></select>
             <button id="Buton1">Click Button</button>
       </div>    
@@ -344,16 +363,12 @@
         </div>
     </section>
     <section>
-        <h2>Though UEFA and CONMEBOL countries have won all the worldcups, Asian and African countries have improved significantly </h2>
+        <h4>Though UEFA and CONMEBOL countries have won all the worldcups, Asian and African countries have improved.</h4>
         <p>
-            In the graph, it can be seen how countries belonging to CAF (Confédération Africaine de Football in Africa) have an 
-            improved performance since 1978. However, this performance has been constant, and it has not increased in the last years.
-            </p>
-        
-            <p>
-              In addition, countries belonging to AFC (Asian Football Confederation in Asia and Australia) have an improved performance 
-              in 1994, 2002, and 2010. However, their performance has decreased in the last two world cups.
-            </p>
+            Though, countries belonging to Africa (CAF) and Asia (AFC) have a relatively strong performance, their performance has decreased in the last worldcups. 
+            Please go the "Confederation Performance" tab to see more details about it."
+         </p>
+
             <div><div id="chart2"></div></div>  
     </section>
 
@@ -373,6 +388,10 @@
     <script src="https://unpkg.com/scrollama"></script>
     <script src="../static/js/wc.js"></script>
     <script src="../static/js/main.js"></script>
-</body>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 
 </html>
