--- a/templates/indexwc1.html
+++ b/templates/indexwc1.html
@@ -23,11 +23,12 @@
     <h1>Hello, world!</h1>
 
     <div class="navbar">
-      <a href="../templates/indexwc1.html"target="_blank">Confederation Performance</a>
-      <a href="../templates/indexfifawc.html"target="_blank">FiFA Ranking &   WC Performance</a>
-      <a href="../templates/indexscroll.html"target="_blank">Brief World Cup History</a>
+      <a href="../templates/indexwc1.html">Confederation Performance</a>
+      <a href="../templates/indexfifawc.html">FiFA Ranking &   WC Performance</a>
+      <a href="../templates/barrace.html">Race to the Top</a>
+      <a href="../templates/indexscroll.html">Brief World Cup History</a>
       <a href="../index.html" class="right">Home</a>
-    </div>
+  </div>
    
    <div class="header">
 
