Update racing bar

--- a/templates/barrace.html
+++ b/templates/barrace.html
@@ -61,17 +61,16 @@
             </br></br></br></br></br></br></br></br></br></br></br>
                 <h4>FIFA Ranking and World Cup Performance</h4>
                 <p>
-                  FIFA releases a weekly/monthly ranking for all teams, and the World Cups take place every four years. 
-                  This racing bar graph presents the FIFA ranking from 1993 to 2018 for either countries or confederation.
+                  This racing bar graph presents the FIFA ranking from 1993 to 2018 for countries or confederation (please select one).
                   In addition, you are able to select the World Cup performance which includes country and confederation 
-                  performance from 1930 to 20118.
+                  performance from 1930 to 20118.  FIFA releases a weekly/monthly ranking for all teams, and the World Cups take place every four years. 
                 </p>
             </br></br>
                 <h4>As expected, Brazil, Germany, Italy, Argentina, France, and Spain are frequently ranked in the Top
                     for both World Cup performance as well as FIFA ranking.
                 </h4>
 
-            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
         
             </div>
           </div>
