--- a/templates/indexfifawc.html
+++ b/templates/indexfifawc.html
@@ -47,7 +47,8 @@
                     <button id="Buton4">Click Button</button>
                     <div id="chart4" class="center"></div>
                     <br />
-                    <h7>In BLUE: FIFA ranking; in RED: world cup position (the lower the better).</h7>
+                    <h7>** Line in <span style="color: darkblue">BLUE</span>: weekly/monthly FIFA ranking (the lower the better).</h7> <br/>
+                    <h7>** Dot in <span style="color: #ff0000">RED</span>: world cup position (the lower the better).</h7>
 
                </div>
               </div>
@@ -58,7 +59,7 @@
                  <div class="p-3 border bg-light"><h5>Brazil and Spain had the most number one ranking, with Germany and Argentina having similar level of number one FIFA ranking.</h5></div>
                 </div>
                 <div class="col">
-                  <div class="p-3 border bg-light"><h5>There is some relation between ranking and world cup performance, though Argentina has underperformed while France has surpassed expectations.</h5></div>
+                  <div class="p-3 border bg-light"><h5>The more time as first in FIFA rank, the more world cup wins. Though Argentina has underperformed while France has surpassed expectations.</h5></div>
                 </div>
               </div>
 
