--- a/templates/indexscroll.html
+++ b/templates/indexscroll.html
@@ -95,7 +95,7 @@
         <div class="row gx-5">
           <div class="col">
                 <div class="p-3 border bg-light">
-                    <h4>A Brief History of Futbol (Soccer) World Cups</h4>
+                    <h2>A Brief History of Futbol (Soccer) World Cups</h2>
                         <p>
                             FIFA is an international governing body for football, beach football and futsal. FIFA divides the 
                             countries in six regions (AFC, CAF, CONCACAF, CONMEBOL, OFC, UEFA). Wold Cups are implemented every 4 year, 
@@ -127,7 +127,7 @@
     <hr />
     <section>
         <div>
-            <h4>Scroll Down to explore the different world cups:</h4>
+            <h3>Scroll Down to explore the different world cups:</h3>
         </div>
         <div> 
             <h7>Select Metric and Click on button:</h7>
@@ -156,6 +156,7 @@
                         <li>Third Place: USA</li>
                         <li>Fourth Place:  Yugoslavia</li>
                         <li>Number of Teams: 13</li>
+                        <li>Top Scorer: Guillermo Stabile (Argentina) - 9 goals</li>
                       </ol>
                     
                 </div>
@@ -167,6 +168,7 @@
                         <li>Third Place: Germany</li>
                         <li>Fourth Place: Austria</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer: Oldfich Nejdly (Czech) - 5 goals</li>
                       </ol>
 
                 </div>
@@ -178,6 +180,7 @@
                         <li>Third Place: Brazil</li>
                         <li>Fourth Place: Sweden</li>
                         <li>Number of Teams: 15</li>
+                        <li>Top Scorer: Leonidas (Brazil) - 7 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1950</h3>
@@ -188,6 +191,7 @@
                         <li>Third Place: Sweden</li>
                         <li>Fourth Place: Spain</li>
                         <li>Number of Teams: 13</li>
+                        <li>Top Scorer: Ademir (Brazil) - 8 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1954</h3>
@@ -198,6 +202,7 @@
                         <li>Third Place: Austria</li>
                         <li>Fourth Place: Uruguay</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer:Sandor Kocsis (Hungary) - 11 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1958</h3>
@@ -208,6 +213,7 @@
                         <li>Third Place: France</li>
                         <li>Fourth Place: Germany</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer: Just Fontaine (France) - 13 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1962</h3>
@@ -218,6 +224,8 @@
                         <li>Third Place: Chile</li>
                         <li>Fourth Place: Yugoslavia</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer: Florian Albert (Hungary), Valentin Ivanov (Soviet Union),
+                            Garrincha (Brazil), Drazan Jerkovic (Croatia), Leonel Sanchez (Chile), Vava (Brazil)  - 4 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1966</h3>
@@ -228,6 +236,7 @@
                         <li>Third Place: Portugal</li>
                         <li>Fourth Place: Soviet Union</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer: Eusebio (Portugal) - 9 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1970</h3>
@@ -238,6 +247,7 @@
                         <li>Third Place: Germany</li>
                         <li>Fourth Place: Uruguay</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer: Gerd Muller (Germany) - 10 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1974</h3>
@@ -248,6 +258,7 @@
                         <li>Third Place: Poland</li>
                         <li>Fourth Place: Brazil</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer: Grzegorz Lato (Poland) - 7 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1978</h3>
@@ -258,6 +269,7 @@
                         <li>Third Place: Brazil</li>
                         <li>Fourth Place: Italy</li>
                         <li>Number of Teams: 16</li>
+                        <li>Top Scorer: Mario Kempes (Argentina) - 6 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1982</h3>
@@ -268,6 +280,7 @@
                         <li>Third Place: Poland</li>
                         <li>Fourth Place: France</li>
                         <li>Number of Teams: 24</li>
+                        <li>Top Scorer: Paolo Rossi (Italia) - 6 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1986</h3>
@@ -278,6 +291,7 @@
                         <li>Third Place: France</li>
                         <li>Fourth Place: Belgium</li>
                         <li>Number of Teams: 24</li>
+                        <li>Top Scorer: Gary Lineker (England) - 6 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1990</h3>
@@ -288,6 +302,7 @@
                         <li>Third Place: Italy</li>
                         <li>Fourth Place: England</li>
                         <li>Number of Teams: 24</li>
+                        <li>Top Scorer: Salvatore Schillaci (Italy) - 6 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1994</h3>
@@ -298,6 +313,7 @@
                         <li>Third Place: Sweden</li>
                         <li>Fourth Place: Bulgary</li>
                         <li>Number of Teams: 24</li>
+                        <li>Top Scorer: Oleg Salenko (Russia), Hristo Stoichkov (Bulgaria) - 6 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 1998</h3>
@@ -308,6 +324,7 @@
                         <li>Third Place: Croatia</li>
                         <li>Fourth Place: Neatherlands</li>
                         <li>Number of Teams: 32</li>
+                        <li>Top Scorer: Davor Suker (Croatia) - 6 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 2002</h3>
@@ -318,6 +335,7 @@
                         <li>Third Place: Turkey</li>
                         <li>Fourth Place: South Korea</li>
                         <li>Number of Teams: 32</li>
+                        <li>Top Scorer: Ronaldo (Brazil) - 8 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 2006</h3>
@@ -328,6 +346,7 @@
                         <li>Third Place: Germany</li>
                         <li>Fourth Place: Portugal</li>
                         <li>Number of Teams: 32</li>
+                        <li>Top Scorer: Miroslav Klose (Germany) - 5 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 2010</h3>
@@ -338,6 +357,8 @@
                         <li>Third Place: Germany</li>
                         <li>Fourth Place: Uruguay</li>
                         <li>Number of Teams: 32</li>
+                        <li>Top Scorer: Thomas Muller (Germany), Diego Forlan (Uruguay),
+                             Wesley Sneijder (Netherlands), David Villa (Spain) - 5 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 2014</h3>
@@ -348,6 +369,7 @@
                         <li>Third Place: Netherlands</li>
                         <li>Fourth Place: Brazil</li>
                         <li>Number of Teams: 32</li>
+                        <li>Top Scorer: James Rodriguez (Colombia) - 6 goals</li>
                       </ol>
                 </div>
                 <div class="step"><h3>World Cup: 2018</h3>
@@ -358,6 +380,7 @@
                         <li>Third Place: Belgium</li>
                         <li>Fourth Place: England</li>
                         <li>Number of Teams: 32</li>
+                        <li>Top Scorer: Harry Kane (England) - 6 goals</li>
                       </ol>
                 </div>
             </div>
