--- a/templates/indexfifawc.html
+++ b/templates/indexfifawc.html
@@ -26,7 +26,7 @@
       <a href="../templates/indexfifawc.html">FiFA Ranking &   WC Performance</a>
       <a href="../templates/barrace.html">Race to the Top</a>
       <a href="../templates/indexscroll.html">Brief World Cup History</a>
-      <a href="../index.html" class="right">Home</a>
+      <a href="../index.html" class="right">Main</a>
   </div>
 
 
