--- a/templates/indexfifawc.html
+++ b/templates/indexfifawc.html
@@ -26,7 +26,8 @@
       <a href="../templates/indexfifawc.html">FiFA Ranking &   WC Performance</a>
       <a href="../templates/barrace.html">Race to the Top</a>
       <a href="../templates/indexscroll.html">Brief World Cup History</a>
-      <a href="../index.html" class="right">Main</a>
+      <a href="../../index.html" class="right">Home</a>
+      <!-- <a href="../index.html" class="right">Main</a> -->
   </div>
 
 
@@ -47,8 +48,8 @@
                     <button id="Buton4">Click Button</button>
                     <div id="chart4" class="center"></div>
                     <br />
-                    <h7>** Line in <span style="color: darkblue">BLUE</span>: weekly/monthly FIFA ranking (the lower the better).</h7> <br/>
-                    <h7>** Dot in <span style="color: #ff0000">RED</span>: world cup position (the lower the better).</h7>
+                    <h7>** Line in <b><span style="color: darkblue">BLUE</span></b>: weekly/monthly FIFA ranking (the lower the better).</h7> <br/>
+                    <h7>** Dot in <b><span style="color: #ff0000">RED</span></b>: world cup position (the lower the better).</h7>
 
                </div>
               </div>
