--- a/templates/indexfifawc.html
+++ b/templates/indexfifawc.html
@@ -60,7 +60,7 @@
                  <div class="p-3 border bg-light"><h5>Brazil and Spain had the most number one ranking, with Germany and Argentina having similar level of number one FIFA ranking.</h5></div>
                 </div>
                 <div class="col">
-                  <div class="p-3 border bg-light"><h5>The more time as first in FIFA rank, the more world cup wins. Though Argentina has underperformed while France has surpassed expectations.</h5></div>
+                  <div class="p-3 border bg-light"><h5>High FIFA ranking aligns with World Cup wins. Though Argentina has underperformed while France has surpassed expectations.</h5></div>
                 </div>
               </div>
 
