--- a/templates/indexfifawc.html
+++ b/templates/indexfifawc.html
@@ -43,9 +43,9 @@
               <div class="col">
                <div class="p-3 border bg-light">
 
-                    <h7>Select COUNTRY and click button:</h7>
+                    <h7>Select COUNTRY:</h7>
                     <select id="select4"></select>
-                    <button id="Buton4">Click Button</button>
+                    <br />
                     <div id="chart4" class="center"></div>
                     <br />
                     <h7>** Line in <b><span style="color: darkblue">BLUE</span></b>: weekly/monthly FIFA ranking (the lower the better).</h7> <br/>
