--- a/templates/indexwc1.html
+++ b/templates/indexwc1.html
@@ -26,7 +26,8 @@
       <a href="../templates/indexfifawc.html">FiFA Ranking &   WC Performance</a>
       <a href="../templates/barrace.html">Race to the Top</a>
       <a href="../templates/indexscroll.html">Brief World Cup History</a>
-      <a href="../index.html" class="right">Main</a>
+      <!-- <a href="../../index.html" class="right">Home</a> -->
+      <a href="../../index.html" class="right">Home</a>
   </div>
    
    <div class="header">
@@ -42,9 +43,8 @@
          <div class="p-3 border bg-light">
 
                 <h5>Futbol continues to develop in Asia and Africa</h5>
-                <h7>Select Metric and click button:</h7>
+                <h7>Select Metric:</h7>
                 <select id="select5"></select>
-                <button id="Buton5">Click Button</button>
                 <br /><br />
                 <div id="chart3"></div>
 
@@ -58,9 +58,8 @@
 
           
               <h5>However, Asia and Africa have declined performance in the last world cups</h5>
-              <h7>Select Confederation and click button:</h7>
+              <h7>Select Confederation:</h7>
               <select id="select6"></select>
-              <button id="Buton6">Click Button</button>
               <br /><br />
 
               <div id="chart3a"></div>
