--- a/templates/indexscroll.html
+++ b/templates/indexscroll.html
@@ -86,7 +86,8 @@
         <a href="../templates/indexfifawc.html">FiFA Ranking &   WC Performance</a>
         <a href="../templates/barrace.html">Race to the Top</a>
         <a href="../templates/indexscroll.html">Brief World Cup History</a>
-        <a href="../index.html" class="right">Main</a>
+        <a href="../../index.html" class="right">Home</a>
+        <!-- <a href="../index.html" class="right">Main</a> -->
     </div>
 
   <div class="header">
@@ -130,9 +131,8 @@
             <h3>Scroll Down to explore the different world cups:</h3>
         </div>
         <div> 
-            <h7>Select Metric and Click on button:</h7>
+            <h7>Select Metric:</h7>
             <select id="select1"></select>
-            <button id="Buton1">Click Button</button>
       </div>    
         <div class="holder">
          
