--- a/templates/indexscroll.html
+++ b/templates/indexscroll.html
@@ -82,6 +82,7 @@
 <body>
 
     <div class="navbar">
+        <a href="../index.html">Main</a>
         <a href="../templates/indexwc1.html">Confederation Performance</a>
         <a href="../templates/indexfifawc.html">FiFA Ranking &   WC Performance</a>
         <a href="../templates/barrace.html">Race to the Top</a>
