--- a/templates/indexfifawc.html
+++ b/templates/indexfifawc.html
@@ -13,6 +13,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.20.2"></script>
 
     <link rel="stylesheet" href="../static/css/style1.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="../static/css/style1.css" />
 
     <style>
     </style>
@@ -20,6 +25,18 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class="w3-bar w3-theme-d2 w3-left-align">
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+      <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>HOME</a>
+      <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/theresa/history" class="w3-bar-item w3-button w3-hide-small w3-hover-white">History</a>
+      <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/carlosM/index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">World Cup and FIFA Ranking</a>
+      <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/carlosortiz/penaltycorner.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">The Penalty Shootout Corner</a>
+      <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/chris/wc_2018.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">World Cup 2018 - Deep Dive</a>
+      <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/theresa/qatar2022" class="w3-bar-item w3-button w3-hide-small w3-hover-white">World Cup 2022</a>
+      <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/about_us.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Us</a>
+      </div>
+      </div>
+    </br>
 
     <div class="navbar">
       <a href="../index.html">Main</a>
@@ -27,7 +44,7 @@
       <a href="../templates/indexfifawc.html">FiFA Ranking &   WC Performance</a>
       <a href="../templates/barrace.html">Race to the Top</a>
       <a href="../templates/indexscroll.html">Brief World Cup History</a>
-      <a href="../../index.html" class="right">Home</a>
+      <!-- <a href="../../index.html" class="right">Home</a> -->
       <!-- <a href="../index.html" class="right">Main</a> -->
   </div>
 
@@ -100,6 +117,7 @@
     <script src="../static/js/vars.js"></script>
     <!-- <script src="../static/js/script.js"></script> -->
     <script src="../static/js/scriptfifawc.js"></script>
+    <script src="../static/js/style1.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
