--- a/templates/indexwc1.html
+++ b/templates/indexwc1.html
@@ -27,7 +27,7 @@
     <div class="w3-bar w3-theme-d2 w3-left-align">
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
 
-      <a href="../index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>HOME</a>
+      <a href="../../index.html" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>HOME</a>
       <!-- <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>HOME</a> -->
       <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/theresa/history" class="w3-bar-item w3-button w3-hide-small w3-hover-white">History</a>
       <a href="https://t6kuruvilla.github.io/tkuruvillaucb2021/carlosM/index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">World Cup and FIFA Ranking</a>
